@@ -1,6 +1,6 @@
-******************
+*******************
 matplotlib artists
-******************
+*******************
 
 :mod:`matplotlib.artist`
 =============================
